Changes from 1.11 to 1.12
-------------------------
(XX February 2006)

* Extended life time of root certificate for SlovakGrid (SK)
* Obsoleted Russian DataGrid CA also in RPM updates (RU)
* Fixed SHA-1 finger print for new SiGNET CA (SI)
* Add NECTEC GOC CA (TH)

Changes from 1.10 to 1.11
-------------------------
(10 January 2006)

* updated signing policy files for SWITCH CA (CH)
* change crl_url from https to http for KEK (JP)
* change crl_url from https to http for AIST (JP)
* extended lifetime of ESnet (+10y) and DoEGrids (+5y) CA certs (US/DoE)
* withdrawn Russian DataGrid CA (has been superseded by RDIG) (RU)

Changes from 1.9 to 1.10
------------------------
(17 October 2006)

* New public web page for the BEGrid CA in metadata info file (BE)
* New contact email addresses for: 
  HellasGrid and SEE-GRID (GR, SEE), INFN CA (IT), Grid-Ireland (IE),
  DOEGrids CA (US/DOE), ASGCCA (TW), APAC (AU)
* New CERN CA added (root and on-line CA), managed by CERN IT/IS (CERN)
* New INFN CA issue 2006 to replace current one (expiring 2007) (IT)
* Retired SWITCH-SSSR hierarchy pending replacement of the tree (CH)
* Added new organisations to the SWITCH namespace (CH)
* Removed KISTI CA (KR)

Changes from 1.8 to 1.9
-----------------------
(11 September 2006)

* New SiGNET CA (with 2048-bit key length) and new Subject DN (SI)
* New HellasGrid CA (both Root and EE) issue 2006 added (GR)
* Modified CINC Root and CINC SDC CA certificate extensions: 
  removed SubjectAltName and IssuerAltName. (CN)
* Updated extendedKeyUsage and nsCertType extension in AustrianGrid CA (AT)

Changes from 1.7 to 1.8
-----------------------
(07 August 2006)

* added O=Universitaet St. Gallen to the list of SWITCH Organisations (CH)
* added newly accredited CINC Root CA and CINC SDC Grid CA (CN)
* added new root certificate for the NAREGI CA (JP)

Changes from 1.6 to 1.7
-----------------------
(24 July 2006)

* removed CESNET-old from accredited list and obsoleted in RPM distribution