@@ -1,0 +1,80 @@
+#! /usr/bin/perl
+#
+$in="switch-orgs.in";
+
+%certnames = (
+"7b2d086c" => '',
+"e36e7a72" => '',
+"e9d08b40" => '',
+"c4435d12" => '',
+"7c0f6d74" => '',
+"4aa5ef7d" => '',
+"072fe468" => '',
+"f8b4299c" => ''
+);
+
+open IN,"$in" or die "Cannot open $in: $!\n";
+while (<IN>) {
+  chomp($_);
+  push @orgs,"/C=CH/$_/*";
+}
+close IN;
+
+foreach $k ( sort keys %certnames ) {
+  $nm=`openssl x509 -subject -noout -in $k.0`;
+  chomp($nm);
+  $nm=~s/^subject=\s+//;
+  $certnames{$k}=$nm;
+}
+
+foreach $k ( sort keys %certnames ) {
+  open SP,">$k.signing_policy" or die "Cannot open $k for write: $!\n";
+
+  foreach ( $certnames{$k} ) {
+    /SwissSign CA/ and @targets=( $certnames{"e36e7a72"} );
+    /SwissSign Bronze CA/ and @targets=( $certnames{"e9d08b40"} );
+    /SwissSign Silver CA/ and @targets=( $certnames{"c4435d12"} );
+    /SWITCH CA/ and @targets=( $certnames{"7c0f6d74"} , $certnames{"f8b4299c"} ,
+                               $certnames{"072fe468"} , $certnames{"4aa5ef7d"} );
+    /SWITCH \w+ CA/ and @targets = @orgs;
+  }
+
+
+  print SP "##############################################################################\n";
+  print SP "# Autogenerated EACL for $k from $in\n";
+  print SP "# @(#)\$Id\$\n#\n";
+
+  if ($certnames{$k} =~ /SWITCH \w+ CA/) {
+    print SP "\n# --- (temporary) workaround for http://savannah.cern.ch/bugs/?21033\n";
+    ($cnalt = $certnames{$k}) =~ s/emailAddress=/Email=/;
+    foreach $canm ($certnames{$k}, $cnalt) {
+      print SP " access_id_CA  X509    '$canm'\n";
+      print SP " pos_rights    globus  CA:sign\n";
+      print SP " cond_subjects globus  '";
+      foreach $t ( sort @targets ) {
+        print SP "\"$t\" " if $t =~ /(Universitaet|Universite|Universita) |ETH|Paul-Scherrer/;
+      }
+      print SP "\"/C=CH/O=SWITCH - Teleinformatikdienste fuer Lehre und Forschung/*\"'\n\n";
+    }
+  }
+
+  foreach $nm ( sort @targets ) {
+    $canm=$certnames{$k};
+    print SP "# --- for $nm\n";
+    print SP " access_id_CA  X509    '$canm'\n";
+    print SP " pos_rights    globus  CA:sign\n";
+    print SP " cond_subjects globus  '\"$nm\"'\n";
+    ( ($canm =~ /emailAddress=/) or ($nm =~ /emailAddress=/) ) and do {
+      $canm =~ s/emailAddress=/Email=/g;
+      $nm   =~ s/emailAddress=/Email=/g;
+      print SP "#\n";
+      print SP " access_id_CA  X509    '$canm'\n";
+      print SP " pos_rights    globus  CA:sign\n";
+      print SP " cond_subjects globus  '\"$nm\"'\n";
+    };
+    print SP "#\n";
+  }
+
+  close SP;
+}
+
